# CPU-simulator-Cpp

./: CMakeLists.txt  README.md  imgui.ini  program.txt
includes/: CPU.hpp  ControlSignals.hpp  ForwardingUnit.hpp  HazardUnit.hpp  Instructions.hpp  Memory.hpp  PipelineRegisters.hpp  PipelineStages.hpp  ProgramLoader.hpp  Registerfile.hpp  Window.hpp
programs/: 01_basic_alu.txt  02_load_use_hazard.txt  03_store_after_load.txt  04_branch_after_load.txt  04_branch_hazards.txt  04_branch_taken_flush.txt  05_branch_after_load.txt  05_jal_jr.txt  06_forward_to_branch.txt  06_jal_jr_demo.txt  06_logic_slt.txt  06_logical_ops.txt
src/: main.cpp
src/CPU/: Memory.cpp  PipelineRegisters.cpp  PipelineStages.cpp  Registerfile.cpp
src/CPU_Controller/: CPU.cpp
src/CPU_Controller/Hazzard_handeling/: ForwardingUnit.cpp  HazardUnit.cpp
src/CPU_Controller/Meta/: ProgramLoader.cpp
src/GUI/: Window.cpp
tests/: cpu_tests.cpp
